templates/modules/security-groups.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Central Security Groups - Web (ALB), App (ASG) and RDS (Database)

Parameters:
  VpcId:
    Type: AWS::EC2::VPC::Id
  ProjectName:
    Type: String
  Environment:
    Type: String

Resources:
  # 1. ALB Público (Entrada Web)
  AlbWebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Public ALB Security Group (HTTP/HTTPS)"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-alb-web-sg"

  # 2. Camada de Aplicação (Só aceita tráfego vindo do ALB)
  AppSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Application Tier Security Group (Port 8080)"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
          SourceSecurityGroupId: !Ref AlbWebSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-app-sg"

  # 3. Camada de Dados (Só aceita tráfego vindo da App)
  RDSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Database Tier Security Group (PostgreSQL)"
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref AppSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-rds-sg"

Outputs:
  AlbWebSecurityGroupId:
    Description: "ID do Security Group do Load Balancer"
    Value: !Ref AlbWebSecurityGroup
  AppSecurityGroupId:
    Description: "ID do Security Group da Aplicação"
    Value: !Ref AppSecurityGroup
  RDSSecurityGroupId:
    Description: "ID do Security Group do Banco de Dados"
    Value: !Ref RDSSecurityGroup
